syntax = "proto3";

package com.anymind;

option java_multiple_files = true;

message PaymentRequest {
  string price = 1;
  double priceModifier = 2;
  string paymentMethod = 3;
  string datetime = 4;
}

message PaymentListRequest {
  string startDateTime = 1;
  string endDateTime = 2;
}

message PaymentResponse {
  string finalPrice = 1;
  int32 points = 2;
}

service PaymentService {
  // unary -synchronous
  rpc calculateFinalPayment(PaymentRequest) returns(PaymentResponse){}
  // server-streaming asynchronous

  // client-streaming asynchronous
  // bi-directional streaming asynchronous
}